crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__other.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Other dependent tiers: %add, %alt, %def, %gls, %coh, %par, %tim",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: add_dependent_tier, alt_dependent_tier, def_dependent_tier,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "gls_dependent_tier, coh_dependent_tier, par_dependent_tier, tim_dependent_tier",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "MOT",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Add"
        },
        {
          "data": "thing there",
          "type": "Alt"
        },
        {
          "data": "thingy = toy car",
          "type": "Def"
        },
        {
          "data": "thingy means the toy car",
          "type": "Gls"
        },
        {
          "data": "deictic reference",
          "type": "Coh"
        },
        {
          "data": "whispered",
          "type": "Par"
        },
        {
          "data": "14:00:00",
          "type": "Tim"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "thingy",
              "content": [
                {
                  "content": "thingy",
                  "type": "text"
                }
              ],
              "raw_text": "thingy",
              "type": "word"
            },
            {
              "cleaned_text": "there",
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
