crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__overlap-markers.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Overlap markers: [<] precedes, [>] follows, indexed [<2] [>2]",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: indexed_overlap_precedes, indexed_overlap_follows",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "if",
              "content": [
                {
                  "content": "if",
                  "type": "text"
                }
              ],
              "raw_text": "if",
              "type": "word"
            },
            {
              "cleaned_text": "we",
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "type": "word"
            },
            {
              "cleaned_text": "have",
              "content": [
                {
                  "content": "have",
                  "type": "text"
                }
              ],
              "raw_text": "have",
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "cleaned_text": "some",
                    "content": [
                      {
                        "content": "some",
                        "type": "text"
                      }
                    ],
                    "raw_text": "some",
                    "type": "word"
                  },
                  {
                    "cleaned_text": "time",
                    "content": [
                      {
                        "content": "time",
                        "type": "text"
                      }
                    ],
                    "raw_text": "time",
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "overlap_end"
                }
              ],
              "type": "annotated_group"
            },
            {
              "cleaned_text": "we",
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "type": "word"
            },
            {
              "cleaned_text": "can",
              "content": [
                {
                  "content": "can",
                  "type": "text"
                }
              ],
              "raw_text": "can",
              "type": "word"
            },
            {
              "cleaned_text": "get",
              "content": [
                {
                  "content": "get",
                  "type": "text"
                }
              ],
              "raw_text": "get",
              "type": "word"
            },
            {
              "cleaned_text": "tickets",
              "content": [
                {
                  "content": "tickets",
                  "type": "text"
                }
              ],
              "raw_text": "tickets",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "Mom",
              "content": [
                {
                  "content": "Mom",
                  "type": "text"
                }
              ],
              "raw_text": "Mom",
              "scoped_annotations": [
                {
                  "type": "overlap_begin"
                }
              ],
              "type": "annotated_word"
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "if",
              "content": [
                {
                  "content": "if",
                  "type": "text"
                }
              ],
              "raw_text": "if",
              "type": "word"
            },
            {
              "cleaned_text": "we",
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "type": "word"
            },
            {
              "cleaned_text": "have",
              "content": [
                {
                  "content": "have",
                  "type": "text"
                }
              ],
              "raw_text": "have",
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "cleaned_text": "some",
                    "content": [
                      {
                        "content": "some",
                        "type": "text"
                      }
                    ],
                    "raw_text": "some",
                    "type": "word"
                  },
                  {
                    "cleaned_text": "time",
                    "content": [
                      {
                        "content": "time",
                        "type": "text"
                      }
                    ],
                    "raw_text": "time",
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "index": 1,
                  "type": "overlap_end"
                }
              ],
              "type": "annotated_group"
            },
            {
              "cleaned_text": "we",
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "type": "word"
            },
            {
              "cleaned_text": "can",
              "content": [
                {
                  "content": "can",
                  "type": "text"
                }
              ],
              "raw_text": "can",
              "type": "word"
            },
            {
              "cleaned_text": "get",
              "content": [
                {
                  "content": "get",
                  "type": "text"
                }
              ],
              "raw_text": "get",
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "cleaned_text": "tickets",
                    "content": [
                      {
                        "content": "tickets",
                        "type": "text"
                      }
                    ],
                    "raw_text": "tickets",
                    "type": "word"
                  },
                  {
                    "cleaned_text": "to",
                    "content": [
                      {
                        "content": "to",
                        "type": "text"
                      }
                    ],
                    "raw_text": "to",
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "index": 2,
                  "type": "overlap_end"
                }
              ],
              "type": "annotated_group"
            },
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "opera",
              "content": [
                {
                  "content": "opera",
                  "type": "text"
                }
              ],
              "raw_text": "opera",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "Mom",
              "content": [
                {
                  "content": "Mom",
                  "type": "text"
                }
              ],
              "raw_text": "Mom",
              "scoped_annotations": [
                {
                  "index": 1,
                  "type": "overlap_begin"
                }
              ],
              "type": "annotated_word"
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "cleaned_text": "honey",
                    "content": [
                      {
                        "content": "honey",
                        "type": "text"
                      }
                    ],
                    "raw_text": "honey",
                    "type": "word"
                  },
                  {
                    "cleaned_text": "we",
                    "content": [
                      {
                        "content": "we",
                        "type": "text"
                      }
                    ],
                    "raw_text": "we",
                    "type": "word"
                  },
                  {
                    "cleaned_text": "need",
                    "content": [
                      {
                        "content": "need",
                        "type": "text"
                      }
                    ],
                    "raw_text": "need",
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "index": 2,
                  "type": "overlap_begin"
                }
              ],
              "type": "annotated_group"
            },
            {
              "cleaned_text": "to",
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "type": "word"
            },
            {
              "cleaned_text": "go",
              "content": [
                {
                  "content": "go",
                  "type": "text"
                }
              ],
              "raw_text": "go",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "my",
              "content": [
                {
                  "content": "my",
                  "type": "text"
                }
              ],
              "raw_text": "my",
              "type": "word"
            },
            {
              "cleaned_text": "foo",
              "content": [
                {
                  "content": "foo",
                  "type": "text"
                }
              ],
              "raw_text": "foo",
              "scoped_annotations": [
                {
                  "type": "overlap_end"
                },
                {
                  "type": "overlap_begin"
                }
              ],
              "type": "annotated_word"
            },
            {
              "cleaned_text": "bar",
              "content": [
                {
                  "content": "bar",
                  "type": "text"
                }
              ],
              "raw_text": "bar",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "broken",
              "content": [
                {
                  "content": "broken",
                  "type": "text"
                }
              ],
              "raw_text": "broken",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
